--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@ Makefile
 Makefile.old
 MANIFEST.bak
 META.yml
-MYMETA.yml
+META.json
+MYMETA.ym
+MYMETA.jsonl
 nytprof.out
 pm_to_blib
+*~
+*.save
+*.old
+*.bk
